[package]
name = "aqua-verifier-rs-types"
authors=["dalmasonto<https://github.com/dalmasonto>","Arthur-Kamau<https://github.com/Arthur-Kamau>" ]
version = "1.2.0"
edition = "2021"
license-file = "LICENCE"
description = "Aqua protocol data types and basic utility types."
readme = "README.md" 
keywords = ["aqua", "aqua-protocol"] # Keywords for crates.io search
categories = ["development-tools", "command-line-utilities"] # Categories on crates.io
repository = "https://github.com/inblockio/aqua-verifier-rs-types"      # Source repository
homepage = "https://github.com/inblockio/aqua-verifier-rs-types"                   # Project homepage
documentation = "https://docs.rs/aqua-verifier-rs-types"                   # Documentation URL
exclude = ["target", "*.lock", ".vscode", ".idea"]    # Files or directories to exclude from the package




[dependencies]
sha3 = "0.10.8"
ethaddr = { version = "0.2.2", features = ["sha3", "serde"] }
libsecp256k1 = "0.7.1"
rustls-webpki = "0.102.4"
flagset = "0.4.5"
rcgen = "0.13.1"
rustls = { version = "0.23.8", default-features = false, features = ["ring", "std"] }
thiserror = "1.0.61"
rand = "0.8.5"
hex = "0.4.3"
chrono = "0.4.38"
url = "2.5.0"
reqwest = { version = "0.12.3", default-features = false, features = [
    "cookies",
    "json",
    "rustls-tls",
] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
base64 = "0.22.1"
serde_with = "3.11.0"
serde-tuple-vec-map = "1.0.1"
